--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -100,11 +100,10 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-.button:active:not(:disabled) {
-  opacity: 0.8;
-}
-
 @media (hover: hover) and (pointer: fine) {
+  .button:active:not(:disabled) {
+    opacity: 0.8;
+  }
   .button {
     transition: all 0.2s;
   }
@@ -201,11 +200,10 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-.demoButton:active:not(:disabled) {
-  opacity: 0.8;
-}
-
 @media (hover: hover) and (pointer: fine) {
+  .demoButton:active:not(:disabled) {
+    opacity: 0.8;
+  }
   .demoButton {
     transition: all 0.2s;
   }
@@ -240,11 +238,10 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-.toggleButton:active:not(:disabled) {
-  opacity: 0.7;
-}
-
 @media (hover: hover) and (pointer: fine) {
+  .toggleButton:active:not(:disabled) {
+    opacity: 0.8;
+  }
   .toggleButton {
     transition: color 0.2s;
   }
